--- a/primary-posts-download.ipynb
+++ b/primary-posts-download.ipynb
@@ -6,7 +6,7 @@
       "name": "primary-posts-download.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/pawljmlo/dawid-phd/blob/main/primary-posts-download.ipynb",
-      "authorship_tag": "ABX9TyMcMz08AMIrS9sYPnyo1Kop",
+      "authorship_tag": "ABX9TyM6645UEPDeqsLTZoAZx513",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,7 +174,7 @@
         "import regex\n",
         "from glob import glob"
       ],
-      "execution_count": 107,
+      "execution_count": 115,
       "outputs": []
     },
     {
@@ -183,24 +183,24 @@
         "id": "ngpisy0-8Is7"
       },
       "source": [
-        "## depresja"
+        "## depression"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IDuFcGGSJ3-A",
-        "outputId": "bc45bebc-4f94-4efe-f0c1-ca98555af628",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        }
+        },
+        "id": "IDuFcGGSJ3-A",
+        "outputId": "ebbf173d-6c52-4199-bd46-27a2e508a269"
       },
       "source": [
         "df = pd.read_csv(\"/content/drive/MyDrive/projekty/dawid-phd/PhD/csv/topics-depression-v3-part.csv\", index_col=\"Column1\")\n",
         "df.head()"
       ],
-      "execution_count": 112,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -292,7 +292,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 112
+          "execution_count": 130
         }
       ]
     },
@@ -313,7 +313,49 @@
         "\n",
         "    urllib.request.urlretrieve(url, file_name)"
       ],
-      "execution_count": 114,
+      "execution_count": 133,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DxWOHPMEgv84"
+      },
+      "source": [
+        "for file in glob('*.html'):\n",
+        "\n",
+        "  with open(file, 'r', encoding = 'iso-8859-1') as f:\n",
+        "    lines = f.readlines()\n",
+        "\n",
+        "  first = 0\n",
+        "  second = 0\n",
+        "\n",
+        "  for i in range(0, len(lines)):\n",
+        "\n",
+        "    flag_first = False\n",
+        "    flag_second = False\n",
+        "\n",
+        "    if not flag_first:\n",
+        "      matched = re.findall(r\"keywords\", lines[i])\n",
+        "      if matched:\n",
+        "        flag_first = True\n",
+        "        first = i\n",
+        "    \n",
+        "    if not flag_second:\n",
+        "      matched = re.findall(r\"Podobne tematy\", lines[i])\n",
+        "      if matched:\n",
+        "        flag_second = True\n",
+        "        second = i\n",
+        "\n",
+        "  # print(first, second)\n",
+        "  with open(file, 'w', encoding = 'iso-8859-1') as f:\n",
+        "    for i in range(first,second):\n",
+        "      f.write(lines[i])\n",
+        "\n",
+        "  # print(lines)\n",
+        "  # break"
+      ],
+      "execution_count": 132,
       "outputs": []
     },
     {
@@ -328,12 +370,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9vKwQIBbDpq0",
-        "outputId": "2b27b789-3f7e-490e-d98a-b53d28ccda66",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        }
+        },
+        "id": "9vKwQIBbDpq0",
+        "outputId": "2b27b789-3f7e-490e-d98a-b53d28ccda66"
       },
       "source": [
         "df = pd.read_csv(\"/content/drive/MyDrive/projekty/dawid-phd/PhD/csv/topics-anxiety-v3-part.csv\", index_col=\"Column1\")\n",
@@ -456,11 +498,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2_ngjsi0YaoT",
-        "outputId": "2466a80e-9b36-4ab0-9d82-c1018152d1ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2_ngjsi0YaoT",
+        "outputId": "2466a80e-9b36-4ab0-9d82-c1018152d1ce"
       },
       "source": [
         "for file in glob('*.html'):\n",
