added encoding to anxiety posts

--- a/primary-posts-download.ipynb
+++ b/primary-posts-download.ipynb
@@ -6,7 +6,7 @@
       "name": "primary-posts-download.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/pawljmlo/dawid-phd/blob/main/primary-posts-download.ipynb",
-      "authorship_tag": "ABX9TyO0wU+8AwLGZaYrwXVXAV6v",
+      "authorship_tag": "ABX9TyO+m7LUqY5KW0Vx8V9gKlvv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/pawljmlo/dawid-phd/blob/main/primary-posts-download.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/pawljmlo/p2p-online-interactions/blob/main/primary-posts-download.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -176,7 +176,7 @@
         "\n",
         "from math import ceil"
       ],
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -202,7 +202,7 @@
         "df = pd.read_csv(\"/content/drive/MyDrive/projekty/dawid-phd/PhD/csv/topics-depression-v4.csv\", index_col=\"Column1\")\n",
         "df.head()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,17 +306,17 @@
       "source": [
         "drive_depression_folder = \"/content/drive/MyDrive/projekty/dawid-phd/PhD/html/depression/\""
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "vYwcIdUbmj48",
-        "outputId": "581a68fa-30ee-4772-b8af-d69a421cd201",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "581a68fa-30ee-4772-b8af-d69a421cd201"
       },
       "source": [
         "for i, row in df[df['link'].notnull()].iterrows():\n",
@@ -332,7 +332,7 @@
         "\n",
         "    urllib.request.urlretrieve(url, drive_depression_folder + file_name)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,10 +354,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "DxWOHPMEgv84",
-        "outputId": "bebebe81-6331-4ce0-fc70-a5893c2afe97",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bebebe81-6331-4ce0-fc70-a5893c2afe97"
       },
       "source": [
         "for file in glob(drive_depression_folder + '*.html'):\n",
@@ -395,7 +395,7 @@
         "  # print(lines)\n",
         "  # break"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,13 +465,13 @@
           "height": 238
         },
         "id": "9vKwQIBbDpq0",
-        "outputId": "066d6890-a23d-4eff-8ed7-bf28cfe55105"
+        "outputId": "1f9204b2-4e64-437b-d1e4-ec70102518f6"
       },
       "source": [
-        "df = pd.read_csv(\"/content/drive/MyDrive/projekty/dawid-phd/PhD/csv/topics-anxiety-v4.csv\", index_col=\"Column1\")\n",
+        "df = pd.read_csv(\"/content/drive/MyDrive/projekty/dawid-phd/csv/topics-anxiety-v4.csv\", index_col=\"Column1\")\n",
         "df.head()"
       ],
-      "execution_count": 22,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,10 +551,8 @@
               "4                 Derealizacja. Depersonalizacja.   5866  NaN"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 22
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     },
@@ -564,9 +562,9 @@
         "id": "7GdAqo_EYAQT"
       },
       "source": [
-        "drive_anxiety_folder = \"/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/\""
+        "drive_anxiety_folder = \"/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-2/\""
       ],
-      "execution_count": 23,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -586,22 +584,22 @@
         "\n",
         "    urllib.request.urlretrieve(url, drive_anxiety_folder + file_name)\n",
         "\n",
+        "  #   break\n",
+        "\n",
+        "  # break\n",
+        "\n",
         "  #   if page > 5: \n",
         "  #     break\n",
         "\n",
         "  # break"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2_ngjsi0YaoT",
-        "outputId": "b480d9ce-25c3-4d43-c133-6857ed4bd74f"
+        "id": "2_ngjsi0YaoT"
       },
       "source": [
         "for file in glob(drive_anxiety_folder + '*.html'):\n",
@@ -631,64 +629,13 @@
         "    for i in range(len(lines)):\n",
         "      f.write(lines[i])"
       ],
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Czy to nerwica? Już nie mam sił:( page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Czy to nerwica? Już nie mam sił:( page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Czy to nerwica? Już nie mam sił:( page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Czy to nerwica? Już nie mam sił:( page-4.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Czy to nerwica? Już nie mam sił:( page-5.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Czy to nerwica? Już nie mam sił:( page-6.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problemy ze skórą page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problemy ze skórą page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problemy ze skórą page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-4.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-5.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-6.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-7.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-8.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problem z Psychiką. Zapaliłem 3 raz w życiu... page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problem z Psychiką. Zapaliłem 3 raz w życiu... page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problem z Psychiką. Zapaliłem 3 raz w życiu... page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problem z Psychiką. Zapaliłem 3 raz w życiu... page-4.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/pomocy!!!!!!!!!!!!!!!!!!!!!!! page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/pomocy!!!!!!!!!!!!!!!!!!!!!!! page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/pomocy!!!!!!!!!!!!!!!!!!!!!!! page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-4.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-5.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-6.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-7.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-8.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-9.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-10.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pogorszenie stanu po lekach? Inne opcje wyleczenia sią. page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pogorszenie stanu po lekach? Inne opcje wyleczenia sią. page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pogorszenie stanu po lekach? Inne opcje wyleczenia sią. page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Wyleczenie bez leków page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Wyleczenie bez leków page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Wyleczenie bez leków page-3.html\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wUqZ74j3Ob36",
-        "outputId": "a3ace04f-168c-4c75-a6df-d981ee88b561",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "wUqZ74j3Ob36"
       },
       "source": [
         "for file in glob(drive_anxiety_folder + '*.html'):\n",
@@ -720,61 +667,29 @@
         "\n",
         "  # print(first, second)\n",
         "  with open(file, 'w') as f:\n",
+        "\n",
+        "    # f.write('<head>')\n",
+        "    f.write('<meta charset=\"UTF-8\">')\n",
+        "\n",
         "    for i in range(first,second):\n",
         "      f.write(lines[i])\n",
         "\n",
         "  # print(lines)\n",
         "  # break"
       ],
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Czy to nerwica? Już nie mam sił:( page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Czy to nerwica? Już nie mam sił:( page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Czy to nerwica? Już nie mam sił:( page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Czy to nerwica? Już nie mam sił:( page-4.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Czy to nerwica? Już nie mam sił:( page-5.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Czy to nerwica? Już nie mam sił:( page-6.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problemy ze skórą page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problemy ze skórą page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problemy ze skórą page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-4.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-5.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-6.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-7.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pobyt w szpitalu psychiatrycznym. Dzień po dniu. page-8.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problem z Psychiką. Zapaliłem 3 raz w życiu... page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problem z Psychiką. Zapaliłem 3 raz w życiu... page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problem z Psychiką. Zapaliłem 3 raz w życiu... page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Problem z Psychiką. Zapaliłem 3 raz w życiu... page-4.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/pomocy!!!!!!!!!!!!!!!!!!!!!!! page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/pomocy!!!!!!!!!!!!!!!!!!!!!!! page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/pomocy!!!!!!!!!!!!!!!!!!!!!!! page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-4.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-5.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-6.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-7.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-8.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-9.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/nerwica lękowa jest 100% wyleczalna page-10.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pogorszenie stanu po lekach? Inne opcje wyleczenia sią. page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pogorszenie stanu po lekach? Inne opcje wyleczenia sią. page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Pogorszenie stanu po lekach? Inne opcje wyleczenia sią. page-3.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Wyleczenie bez leków page-1.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Wyleczenie bez leków page-2.html\n",
-            "/content/drive/MyDrive/projekty/dawid-phd/PhD/html/anxiety/Wyleczenie bez leków page-3.html\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g1STaXAvbmis"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
