added better useless html code removal

--- a/primary-posts-download.ipynb
+++ b/primary-posts-download.ipynb
@@ -6,7 +6,7 @@
       "name": "primary-posts-download.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/pawljmlo/dawid-phd/blob/main/primary-posts-download.ipynb",
-      "authorship_tag": "ABX9TyO+m7LUqY5KW0Vx8V9gKlvv",
+      "authorship_tag": "ABX9TyNcSxNAJ83+PuZ9Wz/6n3LB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -562,7 +562,7 @@
         "id": "7GdAqo_EYAQT"
       },
       "source": [
-        "drive_anxiety_folder = \"/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-2/\""
+        "drive_anxiety_folder = \"/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/\""
       ],
       "execution_count": 12,
       "outputs": []
@@ -593,13 +593,37 @@
         "\n",
         "  # break"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2_ngjsi0YaoT"
+        "id": "92AsUEpmen7n"
+      },
+      "source": [
+        "# problems with one thread \n",
+        "\n",
+        "drive_anxiety_folder = \"/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/\"\n",
+        "\n",
+        "for page in range(1, 11):\n",
+        "\n",
+        "    url = row['link'] + 'page/' + str(page)\n",
+        "    file_name = ('nerwica lękowa jest 100% wyleczalna' + ' page-' + str(page) + \".html\").replace(\"/\", \" \")\n",
+        "\n",
+        "    urllib.request.urlretrieve('https://www.nerwica.com/topic/8447-nerwica-lekowa-jest-100-wyleczalna/page/', drive_anxiety_folder + file_name)"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2_ngjsi0YaoT",
+        "outputId": "19946eb6-d08e-4c71-d307-9fd9165e9a0e"
       },
       "source": [
         "for file in glob(drive_anxiety_folder + '*.html'):\n",
@@ -629,13 +653,34 @@
         "    for i in range(len(lines)):\n",
         "      f.write(lines[i])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-1.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-2.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-3.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-4.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-5.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-6.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-7.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-8.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-9.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-10.html\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wUqZ74j3Ob36"
+        "id": "wUqZ74j3Ob36",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "775eecdb-1487-48fc-e9e3-1a55fd3b022f"
       },
       "source": [
         "for file in glob(drive_anxiety_folder + '*.html'):\n",
@@ -646,7 +691,7 @@
         "    lines = f.readlines()\n",
         "\n",
         "  first = 0\n",
-        "  second = 0\n",
+        "  second = len(lines)\n",
         "\n",
         "  for i in range(0, len(lines)):\n",
         "\n",
@@ -660,7 +705,8 @@
         "        first = i\n",
         "    \n",
         "    if not flag_second:\n",
-        "      matched = re.findall(r\"ipsType_pageTitle'>\", lines[i])\n",
+        "      # matched = re.findall(r\"ipsType_reset'>Najpopularniejsze\", lines[i]) # for other\n",
+        "      matched = re.findall(r\"ipsType_pageTitle'>\", lines[i]) # for standard\n",
         "      if matched:\n",
         "        flag_second = True\n",
         "        second = i\n",
@@ -677,8 +723,25 @@
         "  # print(lines)\n",
         "  # break"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-1.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-2.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-3.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-4.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-5.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-6.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-7.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-8.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-9.html\n",
+            "/content/drive/MyDrive/projekty/dawid-phd/html/anxiety-3/nerwica lękowa jest 100% wyleczalna page-10.html\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
